--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-jest": "23.0.1",
     "babel-preset-react-native": "4.0.0",
     "jest": "23.1.0",
+    "jest-cli": "^23.1.0",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
