--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-navigation": "^2.4.1",
     "request": "^2.87.0"
   },
   "devDependencies": {
