--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.55.4",
     "react-native-crypto": "^2.1.2",
     "react-native-randombytes": "^2.3.0",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-swiper": "^1.5.13",
     "react-navigation": "^2.4.1",
     "request": "2.85.0"
