--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,8 +101,10 @@ android {
         applicationId "com.changjingluapp"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.01" +
+                "" +
+                ""
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
