--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "bundle": "React-native bundle --entry-file index.js --bundle-output ./android/app/src/main/assets/index.android.bundle --platform android --assets-dest ./android/app/src/main/res/ --dev false"
   },
   "dependencies": {
     "babel-preset-react-native": "^4.0.0",
-    "native-echarts": "^0.4.0",
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-crypto": "^2.1.2",
@@ -17,7 +17,8 @@
     "react-native-swiper": "^1.5.13",
     "react-native-update": "5.x",
     "react-navigation": "^2.4.1",
-    "request": "2.85.0"
+    "request": "2.85.0",
+    "echarts": "3.2.3"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
