--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,10 +101,8 @@ android {
         applicationId "com.changjingluapp"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 2
-        versionName "1.0.01" +
-                "" +
-                ""
+        versionCode 1
+        versionName "1.0.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
