--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "3.2.3",
     "react": "16.3.1",
     "react-native": "^0.55.4",
+    "react-native-code-push": "^5.4.2",
     "react-native-cookie": "^0.2.0",
     "react-native-crypto": "^2.1.2",
     "react-native-flexi-radio-button": "^0.2.2",
@@ -20,7 +21,7 @@
     "react-native-randombytes": "^2.3.0",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-swiper": "^1.5.13",
-    "react-native-update": "5.x",
+    "react-native-update": "^5.1.2",
     "react-navigation": "^2.4.1"
   },
   "devDependencies": {
