--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,12 +137,12 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-cookie')
-    compile project(':react-native-image-picker')
-    compile project(':react-native-update')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation project(':react-native-cookie')
+    implementation project(':react-native-image-picker')
+    implementation project(':react-native-update')
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:23.0.1"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
