--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-native-crypto": "^2.1.2",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-image-picker": "^0.26.10",
+    "react-native-qrcode": "^0.2.7",
     "react-native-randombytes": "^2.3.0",
     "react-native-scrollable-tab-view": "^0.8.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-swiper": "^1.5.13",
     "react-native-update": "^5.1.2",
     "react-navigation": "^2.4.1"
