--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
 dependencies {
     implementation project(':react-native-image-picker')
     implementation project(':react-native-update')
+    implementation project(':react-native-wechat')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:23.0.1"
     implementation "com.facebook.react:react-native:+"  // From node_modules
