添加qq分享功能

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-image-picker": "^0.26.10",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-native-qq": "^2.0.5",
     "react-native-randombytes": "^2.3.0",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-swipeout": "^2.3.6",
