--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,9 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        manifestPlaceholders = [
+                    QQ_APPID: "101514855"
+                ]
     }
     splits {
         abi {
@@ -140,6 +143,7 @@ dependencies {
     implementation project(':react-native-image-picker')
     implementation project(':react-native-update')
     implementation project(':react-native-wechat')
+    implementation project(':react-native-qq')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:23.0.1"
     implementation "com.facebook.react:react-native:+"  // From node_modules
