--- a/ios/changjingluApp/Info.plist
+++ b/ios/changjingluApp/Info.plist
@@ -29,7 +29,7 @@
 			<string>weixin</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wxfe22c90996a2f051</string>
+				<string>wx2c1d909136a59ca3</string>
 			</array>
 		</dict>
 		<dict>
