--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "16.3.1",
     "react-native": "^0.55.4",
     "react-native-code-push": "^5.4.2",
+    "react-native-cookie": "^0.2.0",
     "react-native-crypto": "^2.1.2",
     "react-native-flexi-radio-button": "^0.2.2",
     "react-native-image-picker": "^0.26.10",
