--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-jest": "23.0.1",
     "jest": "23.1.0",
     "jest-cli": "^23.1.0",
+    "react-native-cli": "^2.0.1",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
